# AnimatedGIF

./: CMakeLists.txt
src/: AnimatedGIF.cpp  AnimatedGIF.h
